# holocron

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cog.toml
.claude/: settings.json
.github/workflows/: audit.yml  ci.yml  commitlint.yml  docs.yml  release.yml  scorecard.yml
docs/: sql-constructs.md
masson/: README.md
masson/holocron-lsp/: package.yaml
samples/: blog.yml  error_ambiguous_source.yml  error_bad_join_type.yml  error_duplicate_alias.yml  error_duplicate_enum.yml  error_duplicate_relation.yml  error_missing_key.yml  error_multiple.yml  error_unknown_alias.yml  error_unknown_column.yml  error_unknown_key.yml  error_unknown_source.yml  error_unknown_type.yml  error_unsupported_expression.yml  full_features.yml  minimal.yml
src/: compile.rs  error.rs  lib.rs  main.rs  span.rs
src/ast/: document.rs  enum_type.rs  join.rs  parse.rs  select.rs  table.rs  view.rs
src/catalog/: build.rs  mod.rs
src/emit/: enum_type.rs  mod.rs  table.rs  view.rs
src/query/: check.rs
src/resolve/: scope.rs  select.rs  views.rs
